fixed server skills bar length on iPhone Plus models and s8+

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -668,7 +668,7 @@ pre code {
 
 /* CSS for mobile devices */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
 
  .server {
  width: 79%;
@@ -676,7 +676,7 @@ pre code {
 
 }
 
-@media only screen and (max-width: 600px)  {
+@media only screen and (max-width: 400px)  {
  
  html {
  overflow-x: hidden;
